<resources>
    <string name="app_name">Tinderpol</string>
    <string name="start_swipe_button">Start Swiping</string>
    <string name="synchronizing_notices">Sync notices…</string>
    <string name="start_explain_text_1">Swipe left to see the next notice.</string>
    <string name="start_explain_text_2">Swipe right if you have information about the Wanted Person to contact Interpol.</string>
    <string name="start_explain_text_3">Swipe up to see more information about the Wanted Person.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_preferences_file">sharedPreferencesFileKey</string>
    <string name="settings">Settings</string>
    <string name="red_notices">Red Notices</string>
    <string name="yellow_notices">Yellow Notices</string>
    <string name="un_notices">UN Notices</string>
    <string name="show_red_notices_shared_prefs">showRedNoticesSharedPref</string>
    <string name="show_yellow_notices_shared_prefs">showYellowNoticesSharedPref</string>
    <string name="show_UN_notices_shared_prefs">showUnNoticesSharedPref</string>
    <string name="current_noticeId_shared_prefs">currentNoticeId</string>
    <string name="last_updated_shared_prefs">lastUpdated</string>
    <string name="clear_swipe_history">Clear Swipe History</string>
    <string name="clear_starred_notices">Clear Starred Notices</string>
    <string name="starred_notices">Starred Notices</string>
    <string name="sync_notices">Sync Notices</string>
    <string name="no_notices_starred">No Notices Starred</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="loading_starred_notices">Loading…</string>
    <string name="offlineAnchor">offlineAnchor</string>
    <string name="report_criminal_sighting">Report criminal sighting</string>
    <string name="you_are_about_to_report_a_sighting_of_n_criminal_name_n_you_will_be_redirected_to_an_external_website">You are about to report a sighting of \n[criminal name] \n You will be redirected to an external website</string>
    <string name="continue_button_text">Continue</string>

</resources>