<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/viewHorizontalDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:id="@+id/viewHorizontalDivider"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutNoticeSwitches"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:id="@+id/linearLayoutNoticeSwitches"
            app:layout_constraintTop_toBottomOf="@+id/viewHorizontalDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/viewHorizontalDivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red_notices"
                    android:layout_gravity="center"/>
                <Switch
                    android:id="@+id/switchRedNotices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow_notices"
                    android:layout_gravity="center"/>
                <Switch
                    android:id="@+id/switchYellowNotices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/un_notices"
                    android:layout_gravity="center"/>
                <Switch
                    android:id="@+id/switchUnNotices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/viewHorizontalDivider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutNoticeSwitches"
            app:layout_constraintBottom_toTopOf="@id/linearLayoutClearCache"
            />
        <LinearLayout
            android:id="@+id/linearLayoutClearCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewHorizontalDivider2">
            <Button
                android:id="@+id/buttonClearSwipeHistory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/clear_swipe_history"
                android:layout_margin="4dp"/>
            <Button
                android:id="@+id/buttonClearStarredNotices"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/clear_starred_notices"
                android:layout_margin="4dp"/>
            <Button
                android:id="@+id/buttonSyncLocalStorages"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sync_notices"
                android:layout_margin="4dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
